@@ -20,7 +20,7 @@ sms_LevelMax,"Mastered","Mastered a ship by maxing its mastery level.",,shipmast
 sms_ManyRerolls,"Gambling Addict","Rerolled the mastery effects of the same ship type 5 times.",,shipmastery.achievements.ManyRerolls,,VISIBLE,RARE
 sms_FullEnhance,"Maximum Power","Enhanced a ship type to +10.",,shipmastery.achievements.FullEnhance,,VISIBLE,RARE
 sms_MasteredMany,"Full House","Mastered 20 unique non-civilian ship types in a single playthrough (skins do not count as unique).",,shipmastery.achievements.MasteredMany,,VISIBLE,EPIC
-sms_LotsOfMP,"Our Battle Was Legendary","Earned 250 mastery points from a single battle (combat MP multiplier in settings must not exceed 1).",,shipmastery.achievements.LotsOfMP,,VISIBLE,LEGENDARY
+sms_LotsOfMP,"Our Battle Was Legendary","Earned 333 mastery points from a single battle (combat MP multiplier in settings must not exceed 1).",,shipmastery.achievements.LotsOfMP,,VISIBLE,LEGENDARY
 
 sms_AnalysisPackageBattle,"Mastery Farm","Won a pitched battle while having Analysis Package boost your combat-related mastery point gain by at least 50%.",,shipmastery.achievements.AnalysisPackageBattle,,VISIBLE,COMMON
 sms_SPFromConstructs,"Mastery Exchange","Earned a story point by crafting knowledge constructs.",,shipmastery.achievements.SPFromConstructs,,VISIBLE,UNCOMMON
