@@ -13,11 +13,11 @@ Knowledge Superconstruct,sms_superconstruct_hullmod,,,,hide_in_codex,,0,,TRUE,FA
 Engineering Override,sms_engineering_override,0,,,"req_spaceport, no_build_in","Logistics, Requires Dock",2500,TRUE,FALSE,FALSE,0,0,0,0,shipmastery.hullmods.EngineeringOverride,"Increases the number of hullmods that can be built in by %s. Building in hullmods no longer requires mastery points and costs %s fewer credits.
 
 Renders this ship unable to benefit from any mastery effect. Additionally, each installed S-mod decreases the ship's peak combat readiness by %s.",Allows crude S-mod integration without mastery,,graphics/hullmods/sms_engineering_override.png
-Analysis Package,sms_analysis_package,,,,"codex_unlockable, no_drop, special, req_spaceport","Support, Logistics, Requires Dock",15000,,,,5,10,15,20,shipmastery.hullmods.AnalysisPackage,"If installed on a ship with a civilian hull spec, increases the fleet's mastery point gain across all civilian hull types by up to %s/%s/%s/%s, depending on hull size and with diminishing returns.
+Analysis Package,sms_analysis_package,,,,"codex_unlockable, no_drop, special, req_spaceport","Support, Logistics, Requires Dock",15000,,,,5,10,15,20,shipmastery.hullmods.AnalysisPackage,"If installed on a ship with a civilian hull spec, increases the fleet's mastery point gain across all civilian hull types by up to %s/%s/%s/%s, depending on hull size, with diminishing returns, and capped to %s.
 
-If installed on a ship with a combat hull spec, increases the fleet's mastery point gain across all combat hull types by up to %s/%s/%s/%s, depending on hull size and with diminishing returns.
+If installed on a ship with a combat hull spec, increases the fleet's mastery point gain across all combat hull types by up to %s/%s/%s/%s, depending on hull size, with diminishing returns, and capped to %s.
 
-The effect is applied according to the ship's hull spec, not the ship itself, so modifying a particular ship's role, such as through the use of Militarized Subsystems, will not have any effect on this hullmod.",Increases fleet-wide mastery point gain,Negates the effect's diminishing returns and applies the bonus to both civilian and combat hulls.,graphics/hullmods/sms_analysis_package.png
+The effect is applied according to the ship's hull spec, not the ship itself, so modifying a particular ship's role, such as through the use of Militarized Subsystems, will not have any effect on this hullmod.",Increases fleet-wide mastery point gain,"Negates the effect's diminishing returns, but not its cap, and applies the bonus to both civilian and combat hulls.",graphics/hullmods/sms_analysis_package.png
 Mastery - Level 1,sms_npc_indicator1,,,,hide_in_codex,,0,,TRUE,FALSE,0,0,0,0,com.fs.starfarer.api.combat.BaseHullMod,,,,graphics/hullmods/generic_mod.png
 Mastery - Level 2,sms_npc_indicator2,,,,hide_in_codex,,0,,TRUE,FALSE,0,0,0,0,com.fs.starfarer.api.combat.BaseHullMod,,,,graphics/hullmods/generic_mod.png
 Mastery - Level 3,sms_npc_indicator3,,,,hide_in_codex,,0,,TRUE,FALSE,0,0,0,0,com.fs.starfarer.api.combat.BaseHullMod,,,,graphics/hullmods/generic_mod.png
