@@ -3,5 +3,5 @@ package shipmastery.achievements;
 import org.magiclib.achievements.MagicAchievement;
 
 public class LotsOfMP extends MagicAchievement {
-    public static final int NUM_NEEDED = 250;
+    public static final int NUM_NEEDED = 333;
 }
