@@ -6,6 +6,7 @@ No new version, just re-download latest:
 - (4:20 PM EST 5/26/2025): Civilian MP gain now scales with number of civilian ship types in your fleet, up to a maximum of 5.
 - (8:28 PM EST 5/26/2025): Slightly reduced MP gain from large battles, adjusted achievement from 300 MP to 250 MP.
 - (8:48 PM EST 5/26/2025): Constructs per SP 10 -> 15.
+- (10:27 PM EST 5/26/2025): Analysis package bonus has been capped to 100% (sorry), increased MP needed for achievement to 333.
 
 1.1.0
 ----------
